--- a/template/sass/core/__code.scss
+++ b/template/sass/core/__code.scss
@@ -1,11 +1,17 @@
-.main-cl{
+.main-cl {
     color: $main-cl;
 }
 
-.w-cl{
+.w-cl {
     color: $w-cl;
 }
 
-.dis-non{
+.dis-non {
     display: none;
 }
+
+.f-dancing{
+    font-family: 'Dancing Script';
+}
+
+
