--- a/template/sass/core/__variable.scss
+++ b/template/sass/core/__variable.scss
@@ -23,6 +23,7 @@ $bg-g-cl: $g-cl;
 $main-cl: #EA412C;
 $border-cl: #e1e1e1;
 $g-E5E5-cl:#E5E5E5;
+$g-C0C0-cl:#C0C0C0;
 
 
 //font-famili , font-size
