--- a/template/sass/style.scss
+++ b/template/sass/style.scss
@@ -11,6 +11,7 @@
 @import url(../js/libs/popup/magnific-popup.css);
 @import url(../js/libs/lightgallery/lightgallery.css);
 @import url(../font/font-awesome-4.7.0/css/font-awesome.min.css);
+@import url(../js/libs/fluidplayer/css/fluidplayer.css);
 
 // Core
 @import './core/_variable';
