--- a/template/sass/components/__footer.scss
+++ b/template/sass/components/__footer.scss
@@ -1,14 +1,198 @@
-.footer{
+.footer {
     background-color: $bg-w-cl;
     margin-top: auto;
-    .logo{
-        min-width: 170px;
-        margin: auto;
+    color: $w-cl;
+    position: relative;
+    overflow: hidden;
+  
+    mix-blend-mode: multiply;
+
+
+    &::before {
+        content: '';
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-color: rgba($color: $b-cl, $alpha: .8);
+        z-index: -1;
     }
 
-    .test{
+    .bg-footer {
+        position: absolute;
+        top: 0;
+        left: 0;
         width: 100%;
-        height: 500px;
-        background-color: wheat;
+        height: 100%;
+        object-fit: cover;
+        // background-image: url('../img/bg-footer.png');
+        // background-position: center;
+        // background-repeat: no-repeat;
+        // background-size: cover;
+        z-index: -2;
+        mix-blend-mode: luminosity;
     }
+
+    .column {
+        width: calc(100% / 4);
+
+        @include max-media($bk-d-1200) {
+            width: calc(100% / 2);
+        }
+
+       @include max-media($bk-576){
+           width: 100%;
+       }
+    }
+
+    .ft-inner {
+        .ft-logo {
+            img {
+                margin-bottom: 30px;
+
+                @include max-media($bk-d-1200) {
+                    margin-bottom: 20px;
+                }
+
+                filter: brightness(0) invert(1);
+            }
+        }
+
+        .ft-desc {
+            @include lh(21, 12);
+            font-weight: 300;
+        }
+
+        .ft-title {
+            margin-bottom: 30px;
+            font-weight: normal;
+            text-transform: uppercase;
+            @include lh(24,16);
+
+            @include max-media($bk-d-1200) {
+                margin-bottom: 20px;
+            }
+            @include max-media($bk-d-768){
+                margin-bottom: 15px;
+            }
+        }
+
+        .ft-item {
+            position: relative;
+            padding-left: 20px;
+            &:not(:first-child){
+                margin-top: 15px;
+                @include max-media($bk-d-1200){
+                    margin-top: 10px;
+                }
+            }
+
+            &::before {
+                content: '\f105 ';
+                font-family: 'Fontawesome';
+                font-size: 16px;
+                color: $main-cl;
+                position: absolute;                
+                top: 50%;
+                left: 0;
+                transform: translateY(-50%);
+                transition: all .3s ease;
+            }
+
+            
+            &:hover{
+                &::before{
+                    transform: translate(5px ,  -50%);
+                }
+
+                .ft-link{
+                    color: $main-cl;
+                }
+            }
+
+          
+
+            .ft-link {
+                font-weight: 300;
+                font-size: 12px;
+                transition: all .3s ease;
+                @include lh(18 , 12);
+                span{
+                    font-weight: bold;
+                }
+                
+            
+            }
+        }
+
+        .ft-form{
+            margin-top: 20px;
+            position: relative;
+            .f-control{
+                border-radius: 99px;
+                padding: 10px 50px 10px 25px;
+                @include lh(24,14);
+                height: auto;
+                border-color: transparent;
+                
+
+                &::placeholder{
+                    color: $g-C0C0-cl;
+                }
+            }
+
+            .f-submit{
+                position: absolute;
+                top: 0;
+                right: 0;
+                width: 46px;
+                height: 46px;
+                cursor: pointer;
+                img{
+                    margin: 0 auto;
+                }
+            }
+
+            &:hover , &:focus{
+                .f-control{
+                    border-color: $main-cl;
+                }
+            }
+        }
+
+        .ft-img-bct{
+            display: flex;
+            align-items: center;
+            margin-top: 30px;
+            @include max-media($bk-d-1200){
+                margin-top: 20px;
+            }
+            img{
+                &:first-child{
+                    margin-right: 10px;
+                }
+            }
+        }
+    }
+
+    .footer-bottom{
+        border-top: 1px solid rgba($color: $w-cl, $alpha: .5);
+        margin-top: 45px;
+        @include max-media($bk-d-1200){
+            margin-top: 30px;
+        }
+        @include max-media($bk-d-768){
+            margin-top: 20px;
+        }
+        .copy-right{
+            background-color: transparent;
+            padding: 20px 0 18px;
+            @include max-media($bk-d-1200){
+                padding: 15px 0;
+            }
+        }
+    }
+
+
 }
