--- a/template/sass/core/__animation.scss
+++ b/template/sass/core/__animation.scss
@@ -385,3 +385,40 @@
         opacity: 0;
     }
 }
+
+@keyframes ping {
+    0% {
+        -webkit-transform: translate(-50%, -50%) scale(0.2);
+        transform: translate(-50%, -50%) scale(0.2);
+        opacity: 0.8;
+    }
+
+    80% {
+        -webkit-transform: translate(-50%, -50%) scale(1.2);
+        transform: translate(-50%, -50%) scale(1.2);
+        opacity: 0;
+    }
+
+    100% {
+        -webkit-transform: translate(-50%, -50%) scale(2.2);
+        transform: translate(-50%, -50%) scale(2.2);
+        opacity: 0;
+    }
+}
+
+@keyframes pulsate-fwd {
+    0% {
+        -webkit-transform: scale(1);
+        transform: scale(1);
+    }
+
+    50% {
+        -webkit-transform: scale(1.1);
+        transform: scale(1.1);
+    }
+
+    100% {
+        -webkit-transform: scale(1);
+        transform: scale(1);
+    }
+}
