--- a/template/home.html
+++ b/template/home.html
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-    <div class="wrapper" style="height: 3000px;">
+    <div class="wrapper" style="height: auto;">
         <div id="page-loading">
             <img src="img/logo-header.png" alt="logo-header.png" />
         </div>
@@ -460,67 +460,76 @@
             </div>
 
             <section class="seami-music">
-                <div class="music-tx">
-                    <div class="music-ltop">
-                        <div class="container">
-                            <p class="music-label f-dancing main-cl">
-                                Về Seami
-                            </p>
-                            <h3 class="music-title tt-36 t-uppercase">
-                                SEAMI <br>
-                                MUSIC IN town
-                            </h3>
-                            <p class="music-desc f-light">
-                                SEAMI tin rằng ai cũng có thể chơi nhạc và ai cũng có thể tỏa sáng trên sân khấu của
-                                chính mình. Bởi trong mỗi chúng ta đều tồn tại một phần “nghệ sĩ bé”. Với niềm tin đó,
-                                SEAMI luôn ôm ấp sứ mệnh phổ cập kiến thức và nâng tầm thẩm mỹ âm nhạc cho cộng đồng...
-                            </p>
-                        </div>
-                    </div>
-                    <div class="music-lbot">
-                        <div class="container">
-                            <div class="columns">
-                                <div class="column">
-                                    <div class="music-box">
-                                        <div class="music-icon">
-                                            <img src="./img/svg/icon-teacher-w.svg" alt="icon-teacher-w.svg">
+                <div class="music-wrapper">
+                    <div class="container">
+                        <div class="music-tx">
+                            <div class="music-ltop sec-80">
+                                <p class="seami-label f-dancing main-cl">
+                                    Về Seami
+                                </p>
+                                <h3 class="music-title tt-36 t-uppercase">
+                                    SEAMI <br>
+                                    MUSIC IN town
+                                </h3>
+                                <p class="music-desc f-light">
+                                    SEAMI tin rằng ai cũng có thể chơi nhạc và ai cũng có thể tỏa sáng trên sân khấu của
+                                    chính mình. Bởi trong mỗi chúng ta đều tồn tại một phần “nghệ sĩ bé”. Với niềm tin
+                                    đó,
+                                    SEAMI luôn ôm ấp sứ mệnh phổ cập kiến thức và nâng tầm thẩm mỹ âm nhạc cho cộng
+                                    đồng...
+                                </p>
+                                <a href="#" class="music-more">
+                                    Xem thêm
+                                </a>
+                            </div>
+                            <div class="music-lbot sec-50">
+
+                                <div class="columns">
+                                    <div class="column">
+                                        <div class="music-box">
+                                            <div class="music-icon">
+                                                <img src="./img/svg/icon-teacher-w.svg" alt="icon-teacher-w.svg">
+                                            </div>
+                                            <h3 class="music-tt f-bold tt-16 t-uppercase">
+                                                GIẢNG VIÊN GIÀU KINH NGHIỆM
+                                            </h3>
+                                            <p class="music-desc f-light">
+                                                Đội ngũ giảng viên đa quốc gia giàu kinh nghiệm với tối thiểu 500+ giờ
+                                                dạy.
+                                                Học viên được chọn giáo viên mình yêu thích
+                                            </p>
                                         </div>
-                                        <h3 class="music-tt f-bold tt-16">
-                                            GIẢNG VIÊN GIÀU KINH NGHIỆM
-                                        </h3>
-                                        <p class="music-desc f-light">
-                                            Đội ngũ giảng viên đa quốc gia giàu kinh nghiệm với tối thiểu 500+ giờ dạy.
-                                            Học viên được chọn giáo viên mình yêu thích
-                                        </p>
+                                    </div>
+                                    <div class="column">
+                                        <div class="music-box">
+                                            <div class="music-icon">
+                                                <img src="./img/svg/icon-control.svg" alt="icon-control.svg">
+                                            </div>
+                                            <h3 class="music-tt f-bold tt-16 t-uppercase">
+                                                HỌC NHIỀU - CHƠI THÍCH - DIỄN HAY
+                                            </h3>
+                                            <p class="music-desc f-light">
+                                                Không chỉ học, tại SEAMI, học viên còn được tham gia biểu diễn ngoại
+                                                khóa,
+                                                giao lưu, tăng cường tự tin thể hiện bản thân.
+                                            </p>
+                                        </div>
                                     </div>
                                 </div>
-                                <div class="column">
-                                    <div class="music-box">
-                                        <div class="music-icon">
-                                            <img src="./img/svg/icon-control.svg" alt="icon-control.svg">
-                                        </div>
-                                        <h3 class="music-tt f-bold tt-16">
-                                            HỌC NHIỀU - CHƠI THÍCH - DIỄN HAY
-                                        </h3>
-                                        <p class="music-desc f-light">
-                                            Không chỉ học, tại SEAMI, học viên còn được tham gia biểu diễn ngoại khóa,
-                                            giao lưu, tăng cường tự tin thể hiện bản thân.
-                                        </p>
-                                    </div>
-                                </div>
+
                             </div>
                         </div>
                     </div>
-                </div>
-                <div class="music-ig">
-                    <img src="./img/img-music.png" alt="img-music.png">
+                    <div class="music-ig">
+                        <img src="./img/img-music.png" alt="img-music.png">
+                    </div>
                 </div>
             </section>
 
             <section class="connect-us">
                 <div class="container">
                     <div class="us-wrapper">
-                        <p class="us-label f-dancing f-bold">
+                        <p class="seami-label f-dancing f-bold">
                             Kết nối Seami
                         </p>
 
@@ -549,10 +558,10 @@
                 </div>
             </section>
 
-            <section class="study-love-seami">
+            <section class="study-love-seami sec-80">
                 <div class="container">
                     <div class="study-wrapper">
-                        <p class="study-label f-dancing f-bold">
+                        <p class="seami-label f-dancing f-bold main-cl">
                             Lý do
                         </p>
 
@@ -615,7 +624,85 @@
                                     tâm.
                                 </p>
                             </div>
-                            
+
+                        </div>
+                    </div>
+                </div>
+            </section>
+
+            <section class="slide-video-row">
+                <div class="container">
+                    <div class="video-wrapper swiper-custom">
+                        <div class="video-head">
+                            <p class="seami-label f-dancing f-bold main-cl">
+                                Video
+                            </p>
+                            <h3 class="video-title tt-36 t-upercase f-no">
+                                Cảm nhận của học viên
+                            </h3>
+                            <div class="swiper-button-prev"></div>
+                            <div class="swiper-button-next"></div>
+                        </div>
+                        <div class="video-slide">
+                            <div class="swiper">
+                                <div class="swiper-wrapper">
+                                    <div class="swiper-slide">
+                                        <a href="http://www.youtube.com/watch?v=PNhYz6RmIr4"
+                                            class="video-inner popup-video">
+                                            <div class="video-img">
+                                                <div class="video-icon">
+                                                    <img src="./img/svg/icon-play.svg" alt="icon-play.svg">
+                                                </div>
+                                                <img src="./img/img-vi-1.png" alt="img-vi-1.png">
+                                            </div>
+                                            <p class="video-tt tt-16 f-bold"
+                                                title="Seami - Cảm nhận học viên - Học Guitar từ xa - Tương tác Online - Phạm Thị Cẩm Tú">
+                                                Seami - Cảm nhận học viên - Học Guitar từ xa - Tương tác Online -
+                                                Phạm
+                                                Thị
+                                                Cẩm Tú
+                                            </p>
+                                        </a>
+                                    </div>
+                                    <div class="swiper-slide">
+                                        <a href="http://www.youtube.com/watch?v=xD8Xchuxq8g"
+                                            class="video-inner popup-video">
+                                            <div class="video-img">
+                                                <div class="video-icon">
+                                                    <img src="./img/svg/icon-play.svg" alt="icon-play.svg">
+                                                </div>
+                                                <img src="./img/img-vi-2.png" alt="img-vi-2.png">
+                                            </div>
+                                            <p class="video-tt tt-16 f-bold"
+                                                title="Seami - Cảm nhận học viên - Học Guitar từ xa - Tương tác Online - Phạm Thị Cẩm Tú">
+                                                Seami - Cảm nhận học viên - Học Guitar từ xa - Tương tác Online -
+                                                Phạm
+                                                Thị
+                                                Cẩm Tú
+                                            </p>
+
+                                        </a>
+                                    </div>
+                                    <div class="swiper-slide">
+                                        <a href="http://www.youtube.com/watch?v=PNhYz6RmIr4"
+                                            class="video-inner popup-video">
+                                            <div class="video-img">
+                                                <div class="video-icon">
+                                                    <img src="./img/svg/icon-play.svg" alt="icon-play.svg">
+                                                </div>
+                                                <img src="./img/img-vi-3.png" alt="img-vi-3.png">
+                                            </div>
+                                            <p class="video-tt tt-16 f-bold"
+                                                title="Seami - Cảm nhận học viên - Học Guitar từ xa - Tương tác Online - Phạm Thị Cẩm Tú">
+                                                Seami - Cảm nhận học viên - Học Guitar từ xa - Tương tác Online -
+                                                Phạm
+                                                Thị
+                                                Cẩm Tú
+                                            </p>
+                                        </a>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
