--- a/template/sass/core/__variable.scss
+++ b/template/sass/core/__variable.scss
@@ -21,6 +21,7 @@ $bg-g-cl: $g-cl;
 
 //color design
 $main-cl: #EA412C;
+$blue-cl: #145FAA;
 $border-cl: #e1e1e1;
 $g-E5E5-cl:#E5E5E5;
 $g-C0C0-cl:#C0C0C0;
@@ -35,6 +36,7 @@ $cl-body: #000000;
 
 
 //break point
+$bk-1400: 1400px;
 $bk-1200: 1200px;
 $bk-1024: 1024px;
 $bk-992: 992px;
@@ -42,6 +44,7 @@ $bk-768: 768px;
 $bk-576: 576px;
 
 //break point - 1
+$bk-d-1400: $bk-1400 - 1;
 $bk-d-1200: $bk-1200 - 1;
 $bk-d-1024: $bk-1024 - 1;
 $bk-d-992: $bk-992 - 1;
