--- a/template/css/style.css
+++ b/template/css/style.css
@@ -743,6 +743,26 @@ sup {
   font-family: "Dancing Script";
 }
 
+.seami-label {
+  position: relative;
+  display: flex;
+  align-items: center;
+}
+.seami-label::before, .seami-label::after {
+  content: "";
+  background-color: #EA412C;
+  width: 30px;
+  height: 1px;
+  border-radius: 99px;
+  display: block;
+}
+.seami-label::before {
+  margin-right: 10px;
+}
+.seami-label::after {
+  margin-left: 10px;
+}
+
 .header {
   position: relative;
   width: 100%;
@@ -3119,6 +3139,332 @@ html .mfp-wrap {
 }
 .breadcrumb .breadcrumb-menu .breadcrumb-list a:hover {
   color: #EA412C;
+}
+
+.seami-music .music-wrapper {
+  display: flex;
+}
+.seami-music .container {
+  width: auto;
+}
+@media screen and (min-width: 1200px) {
+  .seami-music .container {
+    margin-left: calc((100vw - 1200px)/2);
+    padding-right: 0;
+  }
+}
+.seami-music .music-ltop {
+  padding-right: 55px;
+  position: relative;
+}
+.seami-music .music-ltop::before {
+  content: "";
+  background-image: url("../img/bg-music.png");
+  background-position: bottom;
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: absolute;
+  top: 0;
+  left: calc((100vw - 1200px) / -2 - 15px);
+  height: 100%;
+  width: calc((100vw - 1200px) / 2 + 100% + 15px);
+}
+.seami-music .music-ltop::after {
+  content: "";
+  background-image: url("../img/img-dia.png");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: absolute;
+  top: 50%;
+  left: calc((100vw - 1200px) / -2 - 15px);
+  transform: translate(-50%, -50%);
+  height: 296px;
+  width: 296px;
+  z-index: 1;
+}
+.seami-music .music-ltop .seami-label {
+  margin-bottom: 5px;
+}
+.seami-music .music-ltop .music-title {
+  margin-bottom: 30px;
+  line-height: 1.4;
+  font-weight: normal;
+}
+@media screen and (max-width: 1199px) {
+  .seami-music .music-ltop .music-title {
+    margin-bottom: 20px;
+  }
+}
+.seami-music .music-ltop .music-desc {
+  line-height: 1.5;
+  margin-bottom: 45px;
+}
+.seami-music .music-ltop .music-more {
+  position: relative;
+  display: block;
+  color: #EA412C;
+  font-size: 12px;
+  font-weight: bold;
+  padding-right: 30px;
+  width: max-content;
+  transition: all 0.3s ease;
+}
+.seami-music .music-ltop .music-more::after {
+  content: "";
+  background-image: url("../img/svg/icon-arrow-left.svg");
+  background-position: center;
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 16px;
+  height: 16px;
+}
+.seami-music .music-ltop .music-more:hover {
+  padding-right: 35px;
+}
+.seami-music .music-lbot {
+  background-color: #EA412C;
+  color: #fff;
+  padding-right: 55px;
+  position: relative;
+}
+.seami-music .music-lbot::before {
+  content: "";
+  background-color: #EA412C;
+  position: absolute;
+  top: 0;
+  left: calc((100vw - 1200px) / -2 - 15px);
+  height: 100%;
+  width: calc((100vw - 1200px) / 2 + 100% + 15px);
+}
+.seami-music .music-lbot .column {
+  width: 50%;
+}
+.seami-music .music-lbot .music-icon {
+  margin-bottom: 15px;
+}
+.seami-music .music-lbot .music-tt {
+  margin-bottom: 15px;
+  line-height: 1.5;
+}
+.seami-music .music-lbot .music-desc {
+  line-height: 1.7;
+}
+.seami-music .music-ig {
+  width: 89.7%;
+}
+.seami-music .music-ig img {
+  width: 100%;
+  height: 100%;
+  max-width: 100%;
+  object-fit: cover;
+}
+
+.connect-us {
+  background-color: #145FAA;
+  color: #fff;
+  text-align: center;
+  padding: 30px 0;
+}
+.connect-us .seami-label {
+  margin-bottom: 5px;
+  justify-content: center;
+}
+.connect-us .seami-label::before, .connect-us .seami-label::after {
+  background-color: #fff;
+}
+.connect-us .us-title {
+  line-height: 1.4444444444;
+  font-weight: normal;
+  margin-bottom: 10px;
+}
+.connect-us .us-social {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.connect-us .us-social .us-item {
+  transition: all 0.3s ease;
+}
+.connect-us .us-social .us-item:hover {
+  transform: translateY(-5px);
+}
+.connect-us .us-social .us-item:not(:first-child) {
+  margin-left: 20px;
+}
+
+.study-love-seami {
+  overflow: hidden;
+  background-image: url("../img/bg-study-lo.png");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  position: relative;
+  color: #fff;
+}
+.study-love-seami::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(270deg, #000000 0%, rgba(0, 0, 0, 0) 100%);
+}
+.study-love-seami .study-wrapper {
+  margin-left: calc(100% / 12 * 5);
+  z-index: 1;
+  position: relative;
+}
+.study-love-seami .seami-label {
+  margin-bottom: 5px;
+}
+.study-love-seami .study-title {
+  font-weight: normal;
+  line-height: 1.4444444444;
+  margin-bottom: 30px;
+}
+.study-love-seami .study-desc {
+  line-height: 1.5;
+  margin-bottom: 35px;
+}
+.study-love-seami .study-list {
+  display: flex;
+  flex-wrap: wrap;
+  margin: -15px -35px;
+}
+.study-love-seami .study-item {
+  width: 50%;
+  padding: 15px 35px;
+}
+.study-love-seami .study-item .study-icon {
+  margin-bottom: 15px;
+}
+.study-love-seami .study-item .study-tt {
+  line-height: 1.5;
+  margin-bottom: 15px;
+}
+.study-love-seami .study-item .study-text {
+  line-height: 1.5;
+}
+
+.slide-video-row {
+  background-color: rgba(20, 95, 170, 0.05);
+  padding: 100px 0 80px;
+}
+@media screen and (max-width: 1199px) {
+  .slide-video-row {
+    padding: 60px 0;
+  }
+}
+@media screen and (max-width: 991px) {
+  .slide-video-row {
+    padding: 40px 0;
+  }
+}
+.slide-video-row .video-head {
+  margin-bottom: 30px;
+  position: relative;
+}
+.slide-video-row .seami-label {
+  margin-bottom: 5px;
+}
+.slide-video-row .video-title {
+  line-height: 1.4444444444;
+  font-weight: normal;
+}
+.slide-video-row .swiper-custom .swiper {
+  margin: 0 -15px;
+}
+@media screen and (max-width: 991px) {
+  .slide-video-row .swiper-custom .swiper {
+    margin: 0 -7.5px;
+  }
+}
+.slide-video-row .swiper-custom .swiper-slide {
+  width: calc(100% / 3);
+  padding: 0 15px;
+}
+@media screen and (max-width: 991px) {
+  .slide-video-row .swiper-custom .swiper-slide {
+    padding: 0 7.5px;
+  }
+}
+.slide-video-row .swiper-button-next, .slide-video-row .swiper-button-prev {
+  width: 40px;
+  height: 40px;
+  border-radius: 100%;
+  background-color: #EA412C;
+  margin-top: 0;
+  transform: translateY(-50%);
+}
+.slide-video-row .swiper-button-next::after, .slide-video-row .swiper-button-prev::after {
+  font-size: 20px;
+  color: #fff;
+  font-family: "Fontawesome";
+}
+.slide-video-row .swiper-button-prev {
+  left: auto;
+  right: 55px;
+}
+.slide-video-row .swiper-button-prev::after {
+  content: "";
+}
+.slide-video-row .swiper-button-next {
+  background-color: #000000;
+}
+.slide-video-row .swiper-button-next::after {
+  content: "";
+}
+.slide-video-row .video-inner:hover .video-tt {
+  color: #EA412C;
+}
+.slide-video-row .video-img {
+  position: relative;
+}
+.slide-video-row .video-img .video-icon {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 20px;
+  height: 20px;
+}
+.slide-video-row .video-img .video-icon::before {
+  content: "";
+  width: 40px;
+  height: 40px;
+  border-radius: 100%;
+  background-color: rgba(255, 255, 255, 0.8);
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: -1;
+}
+.slide-video-row .video-img .video-icon::after {
+  content: "";
+  width: 60px;
+  height: 60px;
+  border-radius: 100%;
+  border: 1px solid rgba(255, 255, 255, 0.8);
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: -2;
+}
+.slide-video-row .video-img img {
+  width: 100%;
+  height: 100%;
+  max-width: 100%;
+  object-fit: cover;
+}
+.slide-video-row .video-tt {
+  margin-top: 15px;
+  transition: all 0.3s ease;
+  display: block;
 }
 
 #notfound {
